add address lib

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ dist
 node_modules
 **/.DS_Store
 src/Typescripts/Core
+tests/__mock__/N
+src/Typescripts/Entities/Address.ts
+src/Typescripts/Entities/AddressService.ts
