--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nsemea-salesorder-lib-poc",
-  "version": "1.0.21",
+  "version": "1.0.22",
   "description": "NSEMEA sales order library",
   "main": "none",
   "author": "Dario Da Silva",
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "fs-extra": "^11.2.0",
+    "nsemea-address-lib-poc": "^1.0.12",
     "nsemea-core-poc": "^1.0.33"
   }
 }
